<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@id/imgAppIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@id/txtAppName"
                    style="@style/TextInfoAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <TextView
                    android:id="@id/txtAppVersion"
                    style="@style/TextInfoDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_version_prefix" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@id/txtDevelopInfo"
            style="@style/TextInfoDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_developer_information" />

        <View
            android:layout_width="match_parent"
            android:layout_height="?dividerHeight"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="?dividerDrawable" />

        <TextView
            android:id="@id/txtTmdbHint"
            style="@style/BaseTextMovieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hint_tmdb_sentence" />

        <View
            android:layout_width="match_parent"
            android:layout_height="?dividerHeight"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="?dividerDrawable" />

        <LinearLayout
            android:id="@id/appBuyInfoStatusWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center|right"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@id/imgPlayStore"
                    android:layout_width="25dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_gplay" />

                <TextView
                    android:id="@id/txtInfoRate"
                    style="@style/TextInfoDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate" />
            </LinearLayout>

            <TextView
                android:id="@id/txtAppVersionBuyStatus"
                style="@style/TextInfoDefault"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout="@id/txtInfoRate"
                android:paddingRight="0.0dip" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>